apps/manyfold/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  namespace: manyfold
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
    spec:
      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold-solo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3214
              protocol: TCP
              name: http
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 2Gi
              cpu: 2
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: manyfold-data
