apps/manyfold/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: manyfold
  namespace: manyfold
spec:
  replicas: 0
  serviceName: "manyfold"
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
    spec:
      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3214
              protocol: TCP
              name: http
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 1.2Gi
              cpu: 1
          volumeMounts:
            - name: data
              mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: manyfold
spec:
  serviceName: "postgresql"
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17
        volumeMounts:
        - name: postgresql-storage 
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates: 
  - metadata:
      name: postgresql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 3Gi
