apps/manyfold/service.yaml
# ClusterIP for Traefik HTTPRoute (HTTP + WebSocket)
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
spec:
  selector:
    app: manyfold
  ports:
    - name: http
      port: 3214
      targetPort: 3214
      protocol: TCP
